[project]
name = "da-transformer"
version = "0.1.0"
description = "DA-Transformer for multimodal time series forecasting"
requires-python = ">=3.9,<3.10"
dependencies = [
    "axial_positional_embedding==0.3.12",
    "base58==2.1.1",
    "bertopic==0.17.3",
    "brotlicffi==1.0.9.2",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "CoLT5-attention==0.11.1",
    "contourpy==1.3.0",
    "cupy-cuda13x==13.6.0",
    "cycler==0.12.1",
    "ecdsa==0.19.1",
    "einops==0.8.1",
    "fastrlock==0.8.3",
    "filelock==3.17.0",
    "fonttools==4.59.0",
    "fsspec==2025.7.0",
    "gensim==4.3.3",
    "gmpy2==2.2.1",
    "hdbscan==0.8.40",
    "hf-xet==1.1.10",
    "huggingface-hub==0.34.4",
    "hyper-connections==0.2.1",
    "idna==3.7",
    "importlib_resources==6.5.2",
    "Jinja2==3.1.6",
    "joblib==1.5.1",
    "kiwisolver==1.4.7",
    "llvmlite==0.43.0",
    "local-attention==1.11.2",
    "MarkupSafe==3.0.2",
    "matplotlib==3.9.4",
    "mpmath==1.3.0",
    "narwhals==2.1.2",
    "networkx==3.2.1",
    "nltk==3.9.1",
    "numba==0.60.0",
    "numpy==1.23.5",
    "packaging==25.0",
    "pandas==2.3.1",
    "patool==1.15.0",
    "pillow==11.1.0",
    "platformdirs==4.4.0",
    "plotly==6.3.0",
    "product_key_memory==0.2.11",
    "protobuf==4.25.8",
    "pycparser==2.21",
    "pynndescent==0.5.13",
    "pyopencl==2025.1",
    "pyparsing==3.2.3",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytools==2024.1.14",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "reformer-pytorch==1.4.4",
    "regex==2025.7.34",
    "requests==2.32.4",
    "safetensors==0.6.2",
    "scikit-base==0.12.4",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "sentence-transformers==5.1.0",
    "sentencepiece==0.2.1",
    "siphash24==1.8",
    "six==1.17.0",
    "sktime==0.38.4",
    "smart_open==7.3.0.post1",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tiktoken==0.11.0",
    "tokenizers==0.21.4",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.55.2",
    "typing_extensions==4.12.2",
    "tzdata==2025.2",
    "umap-learn==0.5.9.post2",
    "urllib3==2.5.0",
    "win-inet-pton==1.1.0",
    "wrapt==1.17.3",
    "zipp==3.23.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
